@@ -140,6 +140,13 @@ e
   the transfer overhead between GDB and the remote target when the
   complete register file of a thread is large.
 
+x addr,length
+
+  Given ADDR and LENGTH, fetch LENGTH units from the memory at address
+  ADDR and send the fetched data in binary format.  This packet is
+  equivalent to 'm', except that the data in the response are in
+  binary format.
+
 * Changed remote packets
 
 qXfer:features:read:target.xml
